fixed some merge errors