@@ -21,7 +21,6 @@ package com.chadananda.cocoawallet;
 import android.app.Service;
 import android.content.Intent;
 import android.content.SharedPreferences;
-import android.content.pm.PackageManager;
 import android.os.Binder;
 import android.os.Build;
 import android.os.IBinder;
@@ -34,8 +33,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.UUID;
 import java.util.Scanner;
+import java.util.UUID;
 
 /**
  * MiningService for mining in the background
@@ -162,57 +161,51 @@ public class MiningService extends Service {
     }
 
     public void startMining(MiningConfig config) {
-        Log.i(LOG_TAG, "starting...");
+      Log.i(LOG_TAG, "starting...");
        /* if (process != null) {
             Log.i(LOG_TAG, "shutting down old process first...");
             process.destroy();
         }*/
        // privatePath = getFilesDir().getAbsolutePath();
-        }
-        String fullPath = "";
-        String appDir = "";
-        try {
+       // }
+      String fullPath = "";
+      String appDir = "";
+       // try {
             // write the config
 
             // we'll get these from the config object after it's working
-            appDir = this.getApplicationInfo().nativeLibraryDir;
+          //  appDir = this.getApplicationInfo().nativeLibraryDir;
             //appDir = "/data/data/com.chadananda.cocoawallet/lib/arm64-v8a";
 
        // Log.d("TAG", "startMining: "+stringFromJNI());
-        Log.e("privatePath","privatePath: "+privatePath);
+       // Log.e("privatePath","privatePath: "+privatePath);
        // String fullPath = "";
-        try{
-            String appDir=this.getApplicationInfo().nativeLibraryDir;
-            String wallet="dERoQY3fRgQfG2HpErJ3R4YYBx4aPKF19LT5EnzVsTNZZDPFRvNz9VWG7owvJUiGqWjZ1btyDPT6DcgC4QKAQGsg9qWePwEsRc.20000";
-            String max_bwt="710";
-            String pool = "us.hero.miner.us:1117";
-            String config_template = "-o %s -u %s --tls -k --coin dero -a astrobwt "+
-                    "--astrobwt-max-size=%s --astrobwt-avx2 --pause-on-battery --huge-pages=TRUE "+
-                    "--huge-pages-jit=TRUE --asm=auto --cpu-memory-pool=-1 --cpu-no-yield --print-time=8"+
-                    "--retry-pause=2";
-            String args = String.format(config_template,pool,wallet,max_bwt);
-            String[] pm = {"./libpm",args};
-            Runtime.getRuntime().exec(new String[]{"bash", "-l", "-c", args}, null, new File(appDir));
-           // fullPath = privatePath+"/libpm.so";
-            Log.e("args","args"+" "+appDir);
-            ProcessBuilder pb = new ProcessBuilder("./libpm",args);
-            pb.directory(new File(appDir));
+      try {
+        appDir=this.getApplicationInfo().nativeLibraryDir;
+        String wallet="dERoQY3fRgQfG2HpErJ3R4YYBx4aPKF19LT5EnzVsTNZZDPFRvNz9VWG7owvJUiGqWjZ1btyDPT6DcgC4QKAQGsg9qWePwEsRc.20000";
+        String max_bwt="710";
+        String pool = "us.hero.miner.us:1117";
+        String config_template = "-o %s -u %s --tls -k --coin dero -a astrobwt "+
+                "--astrobwt-max-size=%s --astrobwt-avx2 --pause-on-battery --huge-pages=TRUE "+
+                "--huge-pages-jit=TRUE --asm=auto --cpu-memory-pool=-1 --cpu-no-yield --print-time=8"+
+                "--retry-pause=2";
+        String args = String.format(config_template,pool,wallet,max_bwt);
+        String[] pm = {"./libpm",args};
+        Runtime.getRuntime().exec(new String[]{"bash", "-l", "-c", args}, null, new File(appDir));
+       // fullPath = privatePath+"/libpm.so";
+        Log.e("args","args"+" "+appDir);
+        ProcessBuilder pb = new ProcessBuilder("./libpm",args);
+        pb.directory(new File(appDir));
           
 //             String args = String.format(config_template, pool, wallet, max_bwt);
-
 //             String[] pm = {"./libpm.so", args};
-
 //             fullPath = appDir+"/libpm.so";
-
 //             Log.e("args","appdir: "+appDir);
-
 //             // experiment to try launching binary
 //             execCmd(fullPath+' '+args);
 
-  /*
+             /*
             ProcessBuilder pb = new ProcessBuilder( pm );
-
-
             //in our directory, which is
             pb.directory(new File(appDir)); // needs to be a file type
             // with the directory as ld path so xmrig finds the libs
@@ -223,11 +216,10 @@ public class MiningService extends Service {
             outputHandler = new MiningService.OutputReaderThread(process.getInputStream());
             outputHandler.start();
             Toast.makeText(this, "started: ", Toast.LENGTH_SHORT).show();
-
              */
 
-        } catch (Exception e) {
-            Log.e("launcherror","error: "+e.getLocalizedMessage()+e.getCause());
+      } catch (Exception e) {
+        Log.e("launcherror","error: "+e.getLocalizedMessage()+e.getCause());
           //  Toast.makeText(this, e.getLocalizedMessage(), Toast.LENGTH_LONG).show();
           //  File ourApp = new File(fullPath);
            /* if (ourApp.exists()) {
@@ -236,24 +228,23 @@ public class MiningService extends Service {
                 Log.e("launcherror","file not found: "+fullPath);
             }*/
            // process = null;
-                String outDirString = appDir; //"/data/data/com.chadananda.cocoawallet/lib";
-
-                File ourDir = new File(outDirString);
-                if (ourDir.exists()) {
-                    Log.e("launcherror", "but dir exists: " + outDirString);
-                    File[] ourFiles = ourDir.listFiles();
-                    String myFiles = "";
-                    for (int i = 0; i < ourFiles.length; i++) {
-                        myFiles = myFiles +", "+ ourFiles[i].getName();
-                    }
-                    Log.e("launcherror", "files: " + myFiles);
-                } else {
-                    Log.e("launcherror", "dir not found: "+ outDirString);
-                }
+        String outDirString = appDir; //"/data/data/com.chadananda.cocoawallet/lib";
+        File ourDir = new File(outDirString);
+        if (ourDir.exists()) {
+            Log.e("launcherror", "but dir exists: " + outDirString);
+            File[] ourFiles = ourDir.listFiles();
+            String myFiles = "";
+            for (int i = 0; i < ourFiles.length; i++) {
+                myFiles = myFiles +", "+ ourFiles[i].getName();
             }
-            process = null;
+            Log.e("launcherror", "files: " + myFiles);
+        } else {
+            Log.e("launcherror", "dir not found: "+ outDirString);
         }
+      }
+      process = null;
     }
+
 
     public String getSpeed() {
         return speed;
